<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".Fragments.LoginFragment">

        <ImageView
            android:id="@+id/signup_background"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
             />

        <View
            android:background="@drawable/scrim_gradient"
            android:fitsSystemWindows="true"

            android:layout_height="match_parent"
            android:layout_width="match_parent" />
        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:gravity="center"
                android:id="@+id/signup_header"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:text="Sign up"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/edittext_background"
                android:hint="@string/username"
                android:id="@+id/signUp_username_inputLayout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:textColorHint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_header">

                <androidx.appcompat.widget.AppCompatEditText
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_person_outline_white_24dp"
                    android:id="@+id/username_edditext"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:backgroundTint="#AA000000"
                    android:padding="10dp"
                    android:textColorHint="#cccccc" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/edittext_background"
                android:hint="@string/contact"
                android:id="@+id/signUp_contact_inputLayout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:textColorHint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_username_inputLayout">

                <androidx.appcompat.widget.AppCompatEditText
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_phone_white_24dp"
                    android:id="@+id/contact_edditext"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:backgroundTint="#AA000000"
                    android:padding="10dp"
                    android:textColorHint="#cccccc" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/edittext_background"
                android:hint="@string/email_address"
                android:id="@+id/signUp_email_inputLayout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:textColorHint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_contact_inputLayout">

                <androidx.appcompat.widget.AppCompatEditText
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:id="@+id/email_edditext"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    app:backgroundTint="#AA000000"
                    android:textColorHint="#cccccc" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/edittext_background"
                android:hint="@string/title_password"
                android:id="@+id/signUp_password_inputLayout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:textColorHint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_email_inputLayout"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:id="@+id/password_edittext"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:backgroundTint="#AA000000"
                    android:padding="10dp"
                    android:textColorHint="#cccccc" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/edittext_background"
                android:hint="@string/title_confirm_password"
                android:id="@+id/signUp_confirm_password_inputLayout"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:textColorHint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_password_inputLayout"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:id="@+id/password_confirm_edittext"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:backgroundTint="#AA000000"
                    android:padding="10dp"
                    android:textColorHint="#cccccc" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:background="@drawable/edittext_background"
                android:id="@+id/account_type"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/signUp_confirm_password_inputLayout"
                app:layout_constraintStart_toStartOf="@+id/signUp_confirm_password_inputLayout"
                app:layout_constraintTop_toBottomOf="@+id/signUp_confirm_password_inputLayout">


                <Spinner
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <FrameLayout
                android:background="@drawable/curved_rectange"
                android:id="@+id/signUp_button"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_width="0dp"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/account_type"
                app:layout_constraintStart_toStartOf="@+id/account_type"
                app:layout_constraintTop_toBottomOf="@+id/account_type">

                <TextView
                    android:id="@+id/signUp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Create Account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

            </FrameLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>